# 2dTennisGame

./: .gitignore  .gitmodules  Ball.cpp  Ball.h  BaseGameObject.cpp  BaseGameObject.h  Block.cpp  Block.h  CMakeLists.txt  ControlBar.qml  Game.cpp  Game.h  ImageButton.qml  LevelMenu.qml  LevelWarningPopup.qml  Message.qml  ObjectCreater.cpp  ObjectCreater.h  Platform.cpp  Platform.h  QGame.cpp  QGame.h  SettingMenu.qml  StartMenu.qml  createGameLoop.cpp  createGameLoop.h  filedata.cpp  filedata.h  init.cpp  init.h  levels.cpp  levels.h  main.cpp  main.qml  qml.qrc
ArkanoidCore/: CMakeLists.txt
ArkanoidCore/include/: Ball.h  BaseGameObject.h  Block.h  Game.h  Platform.h  init.h  mainloop.h
ArkanoidCore/src/: Ball.cpp  BaseGameObject.cpp  Block.cpp  Game.cpp  Platform.cpp  init.cpp  mainloop.cpp
GameEngine/: Ball.cpp  BaseGameObject.cpp  BaseGameObject.h  Block.cpp  Block.h  CMakeLists.txt  ObjectCreater.cpp  ObjectCreater.h  Platform.cpp  RenderModel.cpp  RenderModel.h  Shader.cpp  Shader.h  createGameLoop.cpp  createGameLoop.h  filedata.cpp  filedata.h  graphics.cpp  graphics.h  readfile.cpp
GameEngine/include/: glfw3.h  readfile.h
GameEngine/include/glm/simd/: platform.h
include/: Shader.h  graphics.h  library.h  readfile.h
include/glm/detail/: setup.hpp
path/: shaderBall.vs  shaderFragPlatform.fragment  shaderPlatform.vs
