cmake_minimum_required(VERSION 3.8)
project(Arkanoid VERSION 1.0.0)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
find_package(Qt5 COMPONENTS Widgets Core Quick Qml LinguistTools REQUIRED)
set(TS_FILES GameGUI_en_US.ts)
add_subdirectory(ArkanoidCore)
add_executable(Arkanoid main.cpp qml.qrc QGame.cpp QGame.h)
target_link_libraries(Arkanoid ArkanoidCore Qt5::Widgets Qt5::Core Qt5::Quick Qt5::Qml)

#qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})

install(DIRECTORY path CONFIGURATIONS Debug DESTINATION ${CMAKE_INSTALL_PREFIX})
install(DIRECTORY texture CONFIGURATIONS Debug DESTINATION ${CMAKE_INSTALL_PREFIX})
install(DIRECTORY levels CONFIGURATIONS Debug DESTINATION ${CMAKE_INSTALL_PREFIX})
install(DIRECTORY path CONFIGURATIONS Release DESTINATION ${CMAKE_INSTALL_PREFIX})
install(DIRECTORY texture CONFIGURATIONS Release DESTINATION ${CMAKE_INSTALL_PREFIX})
install(DIRECTORY levels CONFIGURATIONS Release DESTINATION ${CMAKE_INSTALL_PREFIX})
install(TARGETS Arkanoid DESTINATION CONFIGURATIONS Debug
       RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
install(TARGETS Arkanoid DESTINATION CONFIGURATIONS Release
       RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
